[gd_scene load_steps=3 format=3 uid="uid://l08au552gm3a"]

[ext_resource type="Script" uid="uid://dlquy00v3kdro" path="res://Template/dialogue_base.gd" id="1_k4dtq"]
[ext_resource type="Texture2D" uid="uid://ch2uvtujpheey" path="res://Assets/main_char.png" id="2_lch7t"]

[node name="DialogueBase" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_k4dtq")

[node name="CharPortrait" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 187.0
offset_right = 5432.0
offset_bottom = 4787.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_lch7t")

[node name="DialoguePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 196.475
offset_top = 534.665
offset_right = 923.475
offset_bottom = 637.275
grow_horizontal = 0
grow_vertical = 0

[node name="Panel" type="Panel" parent="DialoguePanel"]
layout_mode = 0
offset_left = 624.0
offset_top = -54.0
offset_right = 731.0
offset_bottom = -14.0

[node name="CharacterName" type="Label" parent="DialoguePanel/Panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 7.0
offset_right = 91.0
offset_bottom = 35.0
text = "Dr Fulano"

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel"]
layout_mode = 0
offset_left = 33.0
offset_top = 15.0
offset_right = 704.0
offset_bottom = 107.0
text = "Ol√°"
fit_content = true

[node name="ChoicesContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 245.0
offset_top = 290.0
offset_right = 887.0
offset_bottom = 490.0
alignment = 1
